--- a/ResponsiveWebDesignCertification/CertificationProject_TechnicalDocumentation/styles.css
+++ b/ResponsiveWebDesignCertification/CertificationProject_TechnicalDocumentation/styles.css
@@ -6,6 +6,7 @@
 html {
     box-sizing: border-box;
     width: 100%;
+    font-size: 20px;
 }
 
 body {
@@ -20,10 +21,12 @@ body {
     display: block;
     top: 0;
     height: 100%;
+    overflow-x: hidden;
 }
 #navbar ul{
     height: 88vh;
     overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 #navbar header {
@@ -36,7 +39,7 @@ body {
 #main-doc {
     width: 83%;
     margin-left: 14%;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     padding-left: 30px;
 }
 
@@ -53,7 +56,7 @@ body {
 .content {
     color: #4d4e53;
     padding-left: 30px;
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     line-height: 1.5;
 }
 
@@ -95,10 +98,10 @@ body {
     color: #4d4e53;
     text-decoration: none;
     cursor: pointer;
-    font-size: 0.9rem;
+    font-size: 0.85rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
     #navbar{
         all:revert;
         width: 95vw;
