--- a/ResponsiveWebDesignCertification/CertificationProject_TechnicalDocumentation/styles.css
+++ b/ResponsiveWebDesignCertification/CertificationProject_TechnicalDocumentation/styles.css
@@ -114,7 +114,7 @@ body {
         width: 95vw;
         margin: 0 auto;
     }
-    #navbar a{
+    #navbar li a{
         text-align: center;
     }
     #main-doc{
